app/frontend/assets/styles/components/_pageHeader.scss
.pageheader {
    height: 64px;
    padding: 0;
    border-bottom: 1px solid $gray-tint04;
    padding: 0 16px;
    margin-bottom: 16px;
    position: relative;

    .container__logo {
        flex: 1;
        > a {
            display: inline-block;
        }
        .logo {
            max-height: 40px;
            margin: 10px 0 0;
            display: block;

            &--large {
                display: none;
            }
        }

        .pagetitle {
            margin: 0;
            display: inline-block;
            color: $primary;
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -40%);
        }
    }

    .container__uitklapper {
        position: relative;
        z-index: 1;
        padding-top: 1em;
        padding-right: 0.5em;
        > span {
            font-weight: 700;
            text-decoration: none;
            color: $black;
            font-size: 0.8em;
            padding: 0.7em 0.5em 0 0.5em;
            cursor: pointer;
        }

        .trigger--block {
            display: inline-block;
            width: 5em;
            margin-left: -5em;
            padding-bottom: 2em;
        }

        .content {
            position: absolute;
            display: block;
            top: -5px;
            transform: scale(0.98, 0.98);
            right: 1vw;
            padding: 0;
            box-shadow: 0 4px 10px 1px rgba(0, 0, 0, 0.25);
            opacity: 0;
            pointer-events: none;
            transition: all $transition-duration-default $transition-ease-default;
            transform-origin: right top;
            transition-delay: 0.15s;
            background-color: $white;

            &--large {
                width: 98vw;
                max-width: 400px;
                right: -12vw;

                @media (min-width: map-get($grid-breakpoints, md)) {
                    right: 1vw;
                }
            }

            &:not(.container__profiel_notificatie_lijst) {
                top: 2.2em;
            }

            ul {
                margin: 0;
            }
            li {
                margin-bottom: 1px;
            }
            span {
                font-size: 0.87em;
            }
        }

        &.show {
            .content {
                opacity: 1;
                transform: scale(1, 1);
                pointer-events: all;
                transition: all $transition-duration-default $transition-ease-default;
            }
        }

        .trigger--notificationslist {
            position: absolute;
            right: 0;
            top: -1.8em;
            svg {
                vertical-align: text-top;
                path {
                    fill: $black;
                }
            }

            .badge-count {
                position: absolute;
                transform: translate(-60%, -40%);
                background-color: $primary;
                span {
                    display: inline-block;
                    font-size: 0.8333em;
                }
                width: 1.5em;
                height: 1.5em;
                line-height: 1.5em;
            }
        }
    }

    @media (min-width: map-get($grid-breakpoints, md)) {
        .container__uitklapper {
            position: relative;
            &:first-child {
                padding-right: 1em;
            }

            .content {
                right: -1.2em;
            }
        }
    }

    @media (min-width: map-get($grid-breakpoints, sm)) {
        padding: 6px 16px;
        .container__logo {
            .logo--large {
                display: flex;
            }
            .logo--small {
                display: none;
            }
        }
    }

    .container {
        display: flex;
        justify-content: space-between;
    }

    .modal-navigation {
        .modal-dialog {
            width: 100%;
            max-width: 400px;
            position: fixed;
            top: 0;
            right: 0;
            bottom: 0;
            margin: 0;

            ul {
                font-size: 1.25em;

                &:first-of-type {
                    margin: 0;
                }

                a {
                    line-height: 3.2rem;
                    text-decoration: none;
                    color: $gray-tint11;
                    position: relative;
                    display: flex;
                    align-items: center;
                    gap: 0.5rem;

                    &:active,
                    &:hover {
                        color: $primary;
                    }

                    &.selected {
                        &::before {
                            content: "";
                            position: absolute;
                            top: 0;
                            left: -($container-padding-x);
                            bottom: 0;
                            width: $input-padding-y;
                            background-color: $primary;
                        }
                    }
                }

                &.list-nav--tertiary {
                    border-top: 1px solid $gray-tint04;
                    font-size: 1em;

                    .wrapper-horizontal {
                        line-height: 1em;
                        position: relative;

                        a {
                            &:hover,
                            &:focus {
                                color: $primary;
                            }
                        }

                        button,
                        span:not(.badge-count) {
                            padding: 0 0.5rem;
                            display: inline-block;
                            box-sizing: content-box;
                        }

                        button {
                            text-decoration: none;
                            font-weight: 400;
                            color: $gray-tint11;
                            width: 30px;
                        }

                        svg {
                            vertical-align: text-top;
                            path {
                                fill: $gray-tint06;
                            }
                        }
                    }
                }
            }
        }
    }

    .modal-header {
        height: 64px;
    }
    .modal-content {
        height: 100%;
    }
}

body:not(.hasTouch) {
    .pageheader {
        .container__user {
            .container__uitklapper {
                &:not(.no-hover):hover,
                &:not(.no-hover):focus-within {
                    .content {
                        opacity: 1;
                        transform: scale(1, 1);
                        pointer-events: all;
                    }
                }
            }
        }
    }
}

